content/v3.4.0/4-functional/2-commonsettings/2-commonsettings.md
---
slug: "/post2"
title: "Общие настройки"
sort: "2"
---

Меню общих настроек содержит настройки времени хранения записей истории и видеоархива, настройки переадресации портов, настройки UPnP протокола, обновление **eVision**, настройки распознавания, а также экспорт и импорт настроек, устройств, пользователей,и номеров.

![](images/Screenshot_150.png)

Нажмите кнопку общих настроек, выберите пункт **Настройки**. Откроется меню настроек: 

![](images/Screenshot_151.png)

#### Настройки времени хранения

**Настройки времени хранения** позволяют менять время хранения файлов в видеоархиве и время хранения записей в истории. По умолчанию видеоархив хранится 3 суток, записи в истории хранятся 90 суток.

![](images/Screenshot_152.png)

#### Переадресация портов

**Переадресация портов** позволяет создать подключение к серверу **eVision** с внешних IP адресов, через интернет. В поле **Внешний порт** указывается номер порта, на который необходимо включить переадресацию. Диапазон допустимых портов от 1024 до 65535. Поле **Внешний IP** заполняется автоматически после сохранения настроек и после проверки локальной сети. Если маршрутизатор локальной сети позволяет пробросить порт, то в поле **Внешний IP** появляется внешний IP адрес. Из сети интернет будет доступен интерфейс **eVision** с внешним IP и указанным портом.

![](images/Screenshot_156.png)

**!** Если после применения настройки и перезагрузки системы в поле **Внешний IP** не отобразиться внешний адрес роутера, то маршрутизатор локальной сети не позволяет создать разрешающее правило, для этого необходимо обратиться в администратору или службе поддержки производителя маршрутизатора.

#### UPnP
Настройка **UPnP** позволяет включить доступ к интерфейсу **eVision** в локальной сети по протоколу UPnP. При включении **UPnP** в локальной сети появляется новое устройство, при запуске этого устройства, будет открыт в браузере интерфейс **eVision**. В поле **Имя устройства** прописывается название, с которым в локальной сети будет определено новое устройство. В поле **Интерфейс** выбирается IP адрес из настроек сетевых адаптеров компьютера, на котором установлен **eVision**.

![](images/Screenshot_157_2.png)

#### Обновление

**Обновление** позволяет проверить и установить новую версию **eVision**.

![](images/Screenshot_158.png)

#### Настройки распознавания

**Настройки распознавания** позволяют менять точность распознавания лиц. По умолчанию точность распознавания указана - 50%. 

![](images/Screenshot_160.png)

#### Экспорт/импорт
Данный раздел позволяет выгрузить и загрузить настройки **eVision**, устройства и их настройки, базу пользователей, персон и автомобильных номеров.

![](images/Screenshot_159.png)